plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.5.14'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2025.0.0")
	set('springDocVersion', "2.8.16")
	set('shedlockVersion', "6.2.0")
	set('lombokVersion', "1.18.44")
	set('hypersistanceVersion', "3.9.0")
}

dependencies {
	// Core Spring MVC & Boot Platform Ecosystem Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// Lombok (provided-style at compile time only)
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// Cloud Resiliency, OpenFeign Adapters & Circuit Breaker Starters
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
	// redis & kafka for high-throughput caching and messaging
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.kafka:spring-kafka'

	// Database Migration & Transaction Coordination
	implementation 'org.liquibase:liquibase-core'
	implementation "net.javacrumbs.shedlock:shedlock-spring:${shedlockVersion}"
	implementation "net.javacrumbs.shedlock:shedlock-provider-jdbc-template:${shedlockVersion}"
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'

	// High-Throughput Caching & Documentation Optimization Engines
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
	implementation "io.hypersistence:hypersistence-utils-hibernate-63:${hypersistanceVersion}"

	// Diagnostic & Profiling Tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Test Suite Execution Stack
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation "org.testcontainers:junit-jupiter"
	testImplementation "org.testcontainers:kafka"
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

jacoco {
	toolVersion = "0.8.13"
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = false
		html.required = true
	}
}

